# ai-resume-analyze-job-matcher-saas-django

./: .gitignore  README.md  docker-compose.yml
api/: .env.example  manage.py  pyproject.toml
api/application/common/: exceptions.py
api/application/job/: dtos.py  use_cases.py
api/application/matching/: dtos.py  use_cases.py
api/application/resume/: dtos.py  ports.py  use_cases.py
api/application/user/: dtos.py  use_cases.py
api/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
api/config/settings/: base.py  local.py
api/domain/: __init__.py
api/domain/common/: skill_categories.py  value_objects.py
api/domain/job/: aggregate.py  entities.py  exceptions.py  repositories.py  services.py  value_objects.py
api/domain/matching/: aggregate.py  services.py  value_objects.py
api/domain/resume/: aggregate.py  entities.py  exceptions.py  repositories.py  services.py  value_objects.py
api/domain/user/: exceptions.py  repositories.py
api/infrastructure/ai/: gemini_resume_parser.py
api/infrastructure/files/: pdf_parser.py
api/infrastructure/mappers/: job.py  resume.py
api/infrastructure/migrations/: 0001_initial.py  0002_add_resume_analysis_status.py
api/infrastructure/models/: __init__.py  job.py  resume.py  user.py
api/infrastructure/repositories/: job.py  resume.py  user.py
api/infrastructure/search/: client.py  embeddings.py  indexers.py  indices.py  retriever.py
api/infrastructure/tasks/: resume_tasks.py  search_tasks.py
api/interfaces/api/: dependencies.py  exceptions.py
api/tests/: conftest.py
frontend/: next.config.ts  (+2 more)
(+90 files in other folders)
